--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
+  font: 'Arial';
 }
-
+.test{
+  font-family: 'Trebuchet MS';
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
