--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,24 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+h2{
+  font-family: "Nunito"!important;
+}
+h5{
+  font-family: "Nunito"!important;
+}
+div{
+  font-family: "Nunito" !important;
+}
+p{
+  font-family: "Nunito" !important;
+}
+body1{
+  font-family: "Nunito" !important;
+}
+button{
+  font-family: "Nunito" !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
